compiler/tests/en/errors/reserved_name.salam
// EXPECT: reserved
func until():
    ret 0
end
